force-app/main/default/objects/GE_OG_GS_Visa__c/GE_OG_GS_Visa__c.object-meta.xml
<CustomObject>
    <description>R-19370 AG 6/11/2014</description>
    <label>Visa</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Visa Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>