force-app/main/default/objects/GE_OG_GS_Visa__c/fields/DS_Service_Team__c.field-meta.xml
<CustomField>
    <fullName>DS_Service_Team__c</fullName>
    <label>Service Team</label>
    <length>150</length>
    <type>Text</type>
</CustomField>