force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_DS_Last_Exit_Stamp__c.field-meta.xml
<CustomField>
    <fullName>GE_DS_Last_Exit_Stamp__c</fullName>
    <description>R-28979</description>
    <label>Last Exit Stamp</label>
    <type>Date</type>
</CustomField>