force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_DS_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>GE_DS_Manager_Email__c</fullName>
    <description>R-28979</description>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>