force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Assignment_ID__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Assignment_ID__c</fullName>
    <description>R-19370 AG 6/11/2014</description>
    <label>Assignment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>