force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Kick_off_WFFU__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Kick_off_WFFU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden checkbox for Visa/Passport update, can be discarded once in prod</description>
    <label>GE OG GS Kick off Visa WFEmailFU</label>
    <type>Checkbox</type>
</CustomField>