force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Maximum_Days_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Maximum_Days_of_Stay__c</fullName>
    <description>R-19370 AG 6/11/2014</description>
    <label>Maximum Days of Stay</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>