force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Mobilization_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Mobilization_Manager_Email__c</fullName>
    <description>R-21092</description>
    <label>Mobilization Manager Email</label>
    <type>Email</type>
</CustomField>