force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Number_of_Entries__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Number_of_Entries__c</fullName>
    <description>R-20276</description>
    <label>Number of Entries</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>