force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Passport__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Passport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R-19370 AG 6/11/2014</description>
    <label>Passport</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.GE_OG_GS_Technician__c</field>
            <operation>equals</operation>
            <valueField>GE_OG_GS_Passport__c.GE_OG_GS_Technician__c</valueField>
        </filterItems>
        <infoMessage>You must select a Passport that is for the Technician on this record</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>GE_OG_GS_Passport__c</referenceTo>
    <relationshipLabel>Visas</relationshipLabel>
    <relationshipName>Visas</relationshipName>
    <type>Lookup</type>
</CustomField>