force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Passport_Number__c</fullName>
    <description>R-19370 AG 6/11/2014</description>
    <formula>GE_OG_GS_Passport__r.GE_OG_GS_Passport_Number__c</formula>
    <label>Passport Number</label>
    <type>Text</type>
</CustomField>