force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Passport_Technician__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Passport_Technician__c</fullName>
    <formula>GE_OG_GS_Passport__r.GE_OG_GS_Technician__r.Name</formula>
    <label>Technician</label>
    <type>Text</type>
</CustomField>