force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Technician__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R-19370</description>
    <label>Technician/Equipment</label>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipLabel>Visas</relationshipLabel>
    <relationshipName>Visas</relationshipName>
    <type>Lookup</type>
</CustomField>