force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Technicians_Email__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Technicians_Email__c</fullName>
    <label>Technician Email</label>
    <type>Email</type>
</CustomField>