force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_V_Passport_Expiry__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_V_Passport_Expiry__c</fullName>
    <formula>GE_OG_GS_Passport__r.GE_OG_GS_Passport_Expiry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passport Expiry</label>
    <type>Text</type>
</CustomField>