force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Validity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Validity_Start_Date__c</fullName>
    <description>R-19370 AG 6/11/2014</description>
    <label>Validity Start Date</label>
    <type>Date</type>
</CustomField>