force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Visa_Expiry__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Visa_Expiry__c</fullName>
    <formula>IF(GE_OG_GS_Visa_Expiry_Date__c &gt; (TODAY()+180), 
   IMAGE(&quot;/servlet/servlet.FileDownload?file=01512000003mz6Q&quot;,&quot;GREEN&quot;), 
   IF (GE_OG_GS_Visa_Expiry_Date__c &gt; (TODAY()+90),
       IMAGE(&quot;/servlet/servlet.FileDownload?file=01512000003mz6T&quot;, &quot;Yellow&quot;), 
       IF (GE_OG_GS_Visa_Expiry_Date__c &gt;= TODAY(),
           IMAGE(&quot;/servlet/servlet.FileDownload?file=01512000003mz6S&quot;, &quot;Red&quot;),
           IMAGE(&quot;/servlet/servlet.FileDownload?file=01512000003mz6R&quot;, &quot;Purple&quot;)
           ) 
       ) 
   )</formula>
    <label>Visa Expiry</label>
    <type>Text</type>
</CustomField>