force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Visa_For__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Visa_For__c</fullName>
    <description>R-19370 AG 6/11/2014</description>
    <label>Visa For</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Visa</fullName>
            </value>
            <value>
                <fullName>Work Permit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>