force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Visa_Issued_By__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Visa_Issued_By__c</fullName>
    <description>R-19370 AG 6/11/2014</description>
    <label>Visa Issued By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>