force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Visa_Note__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Visa_Note__c</fullName>
    <description>R-19370 AG 6/11/2014</description>
    <label>Visa Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>