force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Visa_Status__c</fullName>
    <description>R-19370 AG 6/11/2014</description>
    <label>Visa Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>