force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Visa_Type__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Visa_Type__c</fullName>
    <description>R-19370 AG 6/11/2014</description>
    <label>Visa Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>30 days Visa Exempt</fullName>
            </value>
            <value>
                <fullName>457 Visa</fullName>
            </value>
            <value>
                <fullName>AGO - Ordinary Visa</fullName>
            </value>
            <value>
                <fullName>AGO - Work Permit</fullName>
            </value>
            <value>
                <fullName>Application in progress</fullName>
            </value>
            <value>
                <fullName>ARG-Short Term work permit - ART 24</fullName>
            </value>
            <value>
                <fullName>AUS - Subclass 400</fullName>
            </value>
            <value>
                <fullName>AUS - Subclass 457</fullName>
            </value>
            <value>
                <fullName>AUS - Subclass 600 (Visitor Visa)</fullName>
            </value>
            <value>
                <fullName>AUS - Subclass 651 (eVisitor visa)</fullName>
            </value>
            <value>
                <fullName>BGD - e-type visa</fullName>
            </value>
            <value>
                <fullName>BHR - Enoc Visit</fullName>
            </value>
            <value>
                <fullName>BHR - Work Visa</fullName>
            </value>
            <value>
                <fullName>BOL - Visa Objeto Determinado</fullName>
            </value>
            <value>
                <fullName>BRA - 1 year Technical Visa</fullName>
            </value>
            <value>
                <fullName>BRA - 90 days Technical Visa</fullName>
            </value>
            <value>
                <fullName>BRA - Visto de Trabalho com Contrato</fullName>
            </value>
            <value>
                <fullName>BRN - Employment Pass</fullName>
            </value>
            <value>
                <fullName>BRN - Professional Pass (PVP)</fullName>
            </value>
            <value>
                <fullName>BRN - Special Permit</fullName>
            </value>
            <value>
                <fullName>Business Visa</fullName>
            </value>
            <value>
                <fullName>Business VISA - R   B1 / B2</fullName>
            </value>
            <value>
                <fullName>Business Visa Upon Arrival</fullName>
            </value>
            <value>
                <fullName>C312</fullName>
            </value>
            <value>
                <fullName>C-3-1 Visa</fullName>
            </value>
            <value>
                <fullName>C-3-9 Visa</fullName>
            </value>
            <value>
                <fullName>CAN - Business Visitor Status</fullName>
            </value>
            <value>
                <fullName>CAN - Work Permit</fullName>
            </value>
            <value>
                <fullName>CHL - Special Work Permit for Tourist</fullName>
            </value>
            <value>
                <fullName>CHN - M Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>