force-app/main/default/objects/GE_OG_GS_Visa__c/fields/GE_OG_GS_Visa_Type_v__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Visa_Type_v__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AG 2/11 - Requirement # pending</description>
    <label>Visa Type</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <errorMessage>The Visa Type you searched for may not be active, or not in a matching Visa Type Country.

Please check the Visa Type name, and Visa Country</errorMessage>
        <filterItems>
            <field>GE_OG_GS_Visa_Type__c.GE_OG_GS_Active_vt__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.GE_OG_GS_Visa_Country__c</field>
            <operation>equals</operation>
            <valueField>GE_OG_GS_Visa_Type__c.GE_OG_GS_vt_Visa_Country__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.GE_OG_GS_Visa_Country__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GE_OG_GS_Visa_Type__c</referenceTo>
    <relationshipLabel>Visas</relationshipLabel>
    <relationshipName>Visas</relationshipName>
    <type>Lookup</type>
</CustomField>