force-app/main/default/objects/GE_OG_GS_Visa__c/fields/P_L__c.field-meta.xml
<CustomField>
    <fullName>P_L__c</fullName>
    <label>P&amp;L</label>
    <length>200</length>
    <type>Text</type>
</CustomField>