force-app/main/default/objects/GE_OG_GS_Visa__c/listViews/GE_OG_GS_All_Visa_Records.listView-meta.xml
<ListView>
    <fullName>GE_OG_GS_All_Visa_Records</fullName>
    <columns>NAME</columns>
    <columns>GE_OG_GS_Visa_Type__c</columns>
    <columns>GE_OG_GS_Visa_For__c</columns>
    <columns>GE_OG_GS_Validity_Start_Date__c</columns>
    <columns>GE_OG_GS_Visa_Expiry_Date__c</columns>
    <columns>GE_OG_GS_Visa_Status__c</columns>
    <columns>GE_OG_GS_Visa_Issued_Date__c</columns>
    <columns>GE_OG_GS_Visa_Issued_By__c</columns>
    <columns>GE_OG_GS_Visa_Country__c</columns>
    <columns>GE_OG_GS_Passport__c</columns>
    <columns>GE_OG_GS_V_Passport_Expiry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Visa Records</label>
    <language>en_US</language>
</ListView>